--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,23 +1,31 @@
 page-register {
-    .register-content {
-      background: linear-gradient(to bottom, #003366 0%, #ccffff 100%);
+  .bg {
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(to bottom, #6eabe7 0%, #ccffff 90%);
+
 
     
-   
-      .register-box {
-        background: #509287;
-        padding: 20px 20px 0px 20px;
-        margin-top: 30px;
-      }
+    .head h1 {
+      padding-top: 30px;
+      font-size: 8vh!important;
+      font-weight: lighter!important;
+      font-family: 'Pacifico', cursive;
+      color: #fff;
       
-   
-      ion-row {
-         align-items: center;
-         text-align: center;
-       }
-   
-       ion-item {
-           border-radius: 20px !important;
+     
+  }
+     .head h5 {
+    font-family:  'Pacifico', cursive;
+    padding-top: 3px;
+    font-weight: 200;
+    font-size: 3;
+    color: #fff;
+} 
+      
+
+ion-item {
+        border-radius: 20px !important;
            padding-left: 20px !important;
            
            font-size: 1.07em;
@@ -25,22 +33,38 @@ page-register {
            border: 1px solid #ffffff;
            border-bottom: 0px !important;
            box-shadow: none !important;
-       }
-   
+        }
+       
+        ion-row {
+          align-items: center;
+          text-align: center;
+        }
+    
+        
        .signup-col {
          margin: 0px 16px 0px 16px;
          padding-bottom: 20px;
        }
+       
+   
+     
    
        .item-inner {
-         border-bottom-color: #ffffff !important;
-         box-shadow: none !important;
+        position: absolute;
+        display: block;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%;
+        color:rgb(12, 12, 12);
+        opacity: 0.6;
        }
    
-       .register-btn {
-        background:linear-gradient(to top right, #003366 31%, #ffffff 99%);
-        border-radius: 20px !important;
-        border: 1.6px solid #ffffff;
-       }
-    }
+
+   
+   
+ 
+  
+  
+      }
   }
