--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,8 +9,8 @@
         
         <img center src="./assets/images/user-img.png" style="width:50%;margin-top:2%"/>    
         
-                              <h5  no-padding no-margin style="margin-Bottom:1%">Surath Gunawardena</h5>
-                              <p style="margin-Bottom:1%" no-padding no-margin>0774599678</p>
+                              <h5  no-padding no-margin style="margin-Bottom:1%">Welcome !!</h5>
+                            
                               
                              
         
