--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,17 +1,71 @@
 page-profile {
-  .profile-content {
-    background: linear-gradient(to bottom, #003366 0%, #ccffff 100%);
-   // font-family:  'Pacifico', cursive;
-    ion-row {
-        align-items: center;
-        text-align: center;
-      }
-      .profile-btn {
-        background:linear-gradient(to top right, #003366 31%, #ffffff 99%);
+  .bg {
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(to bottom, #6eabe7 0%, #ccffff 90%);
+
+
+    
+    .head h1 {
+      padding-top: 30px;
+      font-size: 8vh!important;
+      font-weight: lighter!important;
+      font-family: 'Pacifico', cursive;
+      color: #fff;
+      
+     
+  }
+     .head h5 {
+    font-family:  'Pacifico', cursive;
+    padding-top: 3px;
+    font-weight: 200;
+    font-size: 3;
+    color: #fff;
+} 
+      
+
+ion-item {
         border-radius: 20px !important;
-        border: 1.6px solid #ffffff;
+           padding-left: 20px !important;
+          
+          
+           font-size: 1.07em;
+           margin-bottom: 10px;
+           border: 1px solid #ffffff;
+           border-bottom: 0px !important;
+           box-shadow: none !important;
+        }
+       
+        ion-row {
+          align-items: center;
+          text-align: center;
+        }
+    
+        
+       
+       
+   
+     
+   
+       .item-inner {
+        position: absolute;
+        display: block;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%;
+        color:rgb(12, 12, 12);
+        opacity: 0.6;
+       }
+   
+
+   
+   
+ 
+  
+  
       }
 
-}
+     
 
 }
